--- a/Jupyter_Notebook_Package/Benchmark_Model_Notebook.ipynb
+++ b/Jupyter_Notebook_Package/Benchmark_Model_Notebook.ipynb
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "b53ef74f-52ba-4c63-b412-2f4432408d04",
    "metadata": {},
    "outputs": [],
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "78281644-14cb-4923-aa67-188808db80ef",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
        "4                          151.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "2088358c-8963-4078-9b39-f85bdc0697ee",
    "metadata": {},
    "outputs": [
@@ -430,7 +430,7 @@
        "4  0.141147 -0.142683  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "aa4f27bf-96e0-47b3-b217-c4532ebce51e",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
        "4 -27.356667  27.286389  03-01-2011  129.2"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -557,7 +557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "7b42801e-e7b9-4b17-b4e4-f65fd971decc",
    "metadata": {},
    "outputs": [],
@@ -578,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "c75dffde-a8e3-4a6e-bbab-bf0d8aac7bfe",
    "metadata": {},
    "outputs": [
@@ -726,7 +726,7 @@
        "4  0.141147 -0.142683  129.2  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -750,10 +750,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "de7372e4-26c6-4bd8-9d7a-39bc35b01a14",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Latitude                            0\n",
+      "Longitude                           0\n",
+      "Sample Date                         0\n",
+      "Total Alkalinity                    0\n",
+      "Electrical Conductance              0\n",
+      "Dissolved Reactive Phosphorus       0\n",
+      "nir                              1085\n",
+      "green                            1085\n",
+      "swir16                           1085\n",
+      "swir22                           1085\n",
+      "NDMI                             1085\n",
+      "MNDWI                            1085\n",
+      "pet                                 0\n",
+      "dtype: int64\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -773,12 +793,13 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(wq_data.isna().sum())\n",
     "wq_data = wq_data.fillna(wq_data.median(numeric_only=True))\n",
     "wq_data.isna().sum()"
    ]
@@ -801,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "35381365-adf1-4702-a99d-5cec95812ff9",
    "metadata": {},
    "outputs": [],
@@ -865,7 +886,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "c7e68f6e-1679-467f-803c-e819d654bbab",
    "metadata": {},
    "outputs": [],
@@ -917,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "id": "40808f99-8014-4746-91ae-5b64c61e04a7",
    "metadata": {},
    "outputs": [],
@@ -971,7 +992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "id": "d2d5f62b-585c-45e0-8fa9-73a5fa1248f8",
    "metadata": {},
    "outputs": [
@@ -985,36 +1006,36 @@
       "============================================================\n",
       "\n",
       "Train Evaluation:\n",
-      "R²: 0.903\n",
-      "RMSE: 23.124\n",
+      "R²: 0.906\n",
+      "RMSE: 22.843\n",
       "\n",
       "Test Evaluation:\n",
-      "R²: 0.546\n",
-      "RMSE: 50.877\n",
+      "R²: 0.547\n",
+      "RMSE: 50.788\n",
       "\n",
       "============================================================\n",
       "Training Model for Electrical Conductance\n",
       "============================================================\n",
       "\n",
       "Train Evaluation:\n",
-      "R²: 0.918\n",
-      "RMSE: 98.029\n",
+      "R²: 0.920\n",
+      "RMSE: 96.771\n",
       "\n",
       "Test Evaluation:\n",
-      "R²: 0.585\n",
-      "RMSE: 220.214\n",
+      "R²: 0.593\n",
+      "RMSE: 218.032\n",
       "\n",
       "============================================================\n",
       "Training Model for Dissolved Reactive Phosphorus\n",
       "============================================================\n",
       "\n",
       "Train Evaluation:\n",
-      "R²: 0.882\n",
-      "RMSE: 17.455\n",
+      "R²: 0.884\n",
+      "RMSE: 17.327\n",
       "\n",
       "Test Evaluation:\n",
-      "R²: 0.529\n",
-      "RMSE: 35.182\n"
+      "R²: 0.527\n",
+      "RMSE: 35.267\n"
      ]
     }
    ],
@@ -1048,7 +1069,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "id": "c7f3a047-a05c-4369-8a84-5b287f1ff272",
    "metadata": {},
    "outputs": [
@@ -1084,26 +1105,26 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>Total Alkalinity</td>\n",
-       "      <td>0.903272</td>\n",
-       "      <td>23.123742</td>\n",
-       "      <td>0.545544</td>\n",
-       "      <td>50.876902</td>\n",
+       "      <td>0.905606</td>\n",
+       "      <td>22.843020</td>\n",
+       "      <td>0.547130</td>\n",
+       "      <td>50.788061</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>Electrical Conductance</td>\n",
-       "      <td>0.917848</td>\n",
-       "      <td>98.028822</td>\n",
-       "      <td>0.584648</td>\n",
-       "      <td>220.213714</td>\n",
+       "      <td>0.919943</td>\n",
+       "      <td>96.770545</td>\n",
+       "      <td>0.592837</td>\n",
+       "      <td>218.032048</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>Dissolved Reactive Phosphorus</td>\n",
-       "      <td>0.882169</td>\n",
-       "      <td>17.454757</td>\n",
-       "      <td>0.529145</td>\n",
-       "      <td>35.181776</td>\n",
+       "      <td>0.883893</td>\n",
+       "      <td>17.326621</td>\n",
+       "      <td>0.526853</td>\n",
+       "      <td>35.267320</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1111,12 +1132,12 @@
       ],
       "text/plain": [
        "                       Parameter  R2_Train  RMSE_Train   R2_Test   RMSE_Test\n",
-       "0               Total Alkalinity  0.903272   23.123742  0.545544   50.876902\n",
-       "1         Electrical Conductance  0.917848   98.028822  0.584648  220.213714\n",
-       "2  Dissolved Reactive Phosphorus  0.882169   17.454757  0.529145   35.181776"
+       "0               Total Alkalinity  0.905606   22.843020  0.547130   50.788061\n",
+       "1         Electrical Conductance  0.919943   96.770545  0.592837  218.032048\n",
+       "2  Dissolved Reactive Phosphorus  0.883893   17.326621  0.526853   35.267320"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1152,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "id": "c561f152-2058-4c0a-b458-835892607989",
    "metadata": {},
    "outputs": [
@@ -1251,7 +1272,7 @@
        "4                            NaN  "
       ]
      },
-     "execution_count": 17,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1274,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "9c79a123-b5d1-482a-b82e-2b1ef87773e5",
    "metadata": {},
    "outputs": [
@@ -1391,7 +1412,7 @@
        "4 -0.017761  0.080052  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1403,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 15,
    "id": "2d5c5ce3-6665-4ba0-8f8a-99d34be8ddce",
    "metadata": {},
    "outputs": [
@@ -1483,7 +1504,7 @@
        "4 -32.000556  28.581667  01-10-2014  152.50000"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1495,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 16,
    "id": "d1dabb48-7f82-4acf-b509-21cc15a5a4e0",
    "metadata": {},
    "outputs": [],
@@ -1517,7 +1538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "5c41d268-0657-490b-94f3-8ffeb67c2265",
    "metadata": {},
    "outputs": [],
@@ -1528,7 +1549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "3126bf77-fb54-4609-a09c-8e36b496d108",
    "metadata": {},
    "outputs": [
@@ -1608,7 +1629,7 @@
        "4   8711.0 -0.017761  0.080052  152.50000"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1621,7 +1642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 19,
    "id": "d7b033c7-3d5f-4179-b8f8-182f8caad0dc",
    "metadata": {},
    "outputs": [
@@ -1631,7 +1652,7 @@
        "(200, 4)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1642,7 +1663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 20,
    "id": "87b59132-ff14-421e-b37b-472a0adcd9da",
    "metadata": {},
    "outputs": [],
@@ -1662,7 +1683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 21,
    "id": "398e375c-60cc-4fa5-a697-ae12fdab300c",
    "metadata": {},
    "outputs": [],
@@ -1679,7 +1700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 22,
    "id": "46e1c4fa-e49f-40cf-ac10-729b82c4b37b",
    "metadata": {},
    "outputs": [
@@ -1718,45 +1739,45 @@
        "      <td>27.822778</td>\n",
        "      <td>-32.043333</td>\n",
        "      <td>01-09-2014</td>\n",
-       "      <td>114.558899</td>\n",
-       "      <td>315.525271</td>\n",
-       "      <td>25.235333</td>\n",
+       "      <td>111.425630</td>\n",
+       "      <td>306.265929</td>\n",
+       "      <td>30.079024</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>26.077500</td>\n",
        "      <td>-33.329167</td>\n",
        "      <td>16-09-2015</td>\n",
-       "      <td>155.383281</td>\n",
-       "      <td>647.889489</td>\n",
-       "      <td>60.455833</td>\n",
+       "      <td>156.604275</td>\n",
+       "      <td>652.229178</td>\n",
+       "      <td>60.188083</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>27.640028</td>\n",
        "      <td>-32.991639</td>\n",
        "      <td>07-05-2015</td>\n",
-       "      <td>61.108269</td>\n",
-       "      <td>723.033983</td>\n",
-       "      <td>29.445333</td>\n",
+       "      <td>68.860839</td>\n",
+       "      <td>612.444289</td>\n",
+       "      <td>30.139363</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>24.439167</td>\n",
        "      <td>-34.096389</td>\n",
        "      <td>07-02-2012</td>\n",
-       "      <td>71.718494</td>\n",
-       "      <td>234.056986</td>\n",
-       "      <td>13.726667</td>\n",
+       "      <td>75.534022</td>\n",
+       "      <td>272.538771</td>\n",
+       "      <td>20.400167</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>28.581667</td>\n",
        "      <td>-32.000556</td>\n",
        "      <td>01-10-2014</td>\n",
-       "      <td>108.912650</td>\n",
-       "      <td>312.262200</td>\n",
-       "      <td>30.210000</td>\n",
+       "      <td>110.395884</td>\n",
+       "      <td>318.974067</td>\n",
+       "      <td>32.357167</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1764,21 +1785,21 @@
       ],
       "text/plain": [
        "   Longitude   Latitude Sample Date  Total Alkalinity  Electrical Conductance  \\\n",
-       "0  27.822778 -32.043333  01-09-2014        114.558899              315.525271   \n",
-       "1  26.077500 -33.329167  16-09-2015        155.383281              647.889489   \n",
-       "2  27.640028 -32.991639  07-05-2015         61.108269              723.033983   \n",
-       "3  24.439167 -34.096389  07-02-2012         71.718494              234.056986   \n",
-       "4  28.581667 -32.000556  01-10-2014        108.912650              312.262200   \n",
+       "0  27.822778 -32.043333  01-09-2014        111.425630              306.265929   \n",
+       "1  26.077500 -33.329167  16-09-2015        156.604275              652.229178   \n",
+       "2  27.640028 -32.991639  07-05-2015         68.860839              612.444289   \n",
+       "3  24.439167 -34.096389  07-02-2012         75.534022              272.538771   \n",
+       "4  28.581667 -32.000556  01-10-2014        110.395884              318.974067   \n",
        "\n",
        "   Dissolved Reactive Phosphorus  \n",
-       "0                      25.235333  \n",
-       "1                      60.455833  \n",
-       "2                      29.445333  \n",
-       "3                      13.726667  \n",
-       "4                      30.210000  "
+       "0                      30.079024  \n",
+       "1                      60.188083  \n",
+       "2                      30.139363  \n",
+       "3                      20.400167  \n",
+       "4                      32.357167  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1790,7 +1811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 23,
    "id": "0d3a8c41-dba2-43e4-b84c-a50a096980e7",
    "metadata": {},
    "outputs": [],
