--- a/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
+++ b/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "dcd447c8-2951-4391-a5c8-916ce9666306",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
     "        median_green = float(green.median(skipna=True).values)\n",
     "        median_nir = float(nir.median(skipna=True).values)\n",
     "        median_swir16 = float(swir16.median(skipna=True).values)\n",
-    "        median_swir22 = float(swir22.median(skipna=True).values)\n",
+    "        median_swir22 = float(swir22.median(skipna=True).values) # aqui ele calcula a mediana dos caras, mas as vezes a média pode ser melhor\n",
     "\n",
     "        # Replace 0 with NaN\n",
     "        median_green = median_green if median_green != 0 else np.nan\n",
@@ -354,7 +354,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 200/200 [08:15<00:00,  2.48s/it]\n"
+      "100%|██████████| 200/200 [16:02<00:00,  4.81s/it]\n"
      ]
     }
    ],
@@ -893,7 +893,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -907,7 +907,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
