more landsat features

--- a/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
+++ b/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "a09f2097-d79a-4a87-9977-79a85b8e651b",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,8 @@
     "\n",
     "from datetime import date\n",
     "from tqdm import tqdm\n",
-    "import os"
+    "import os\n",
+    "import time"
    ]
   },
   {
@@ -74,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "dcd447c8-2951-4391-a5c8-916ce9666306",
    "metadata": {},
    "outputs": [],
@@ -82,43 +83,61 @@
     "# Setup\n",
     "tqdm.pandas()\n",
     "\n",
-    "def compute_Landsat_values(row):\n",
-    "    lat = row['Latitude']\n",
-    "    lon = row['Longitude']\n",
-    "    date = pd.to_datetime(row['Sample Date'], dayfirst=True, errors='coerce')\n",
-    "\n",
-    "    # Buffer size for ~100m \n",
-    "    bbox_size = 0.00089831  \n",
-    "    bbox = [\n",
-    "        lon - bbox_size / 2,\n",
-    "        lat - bbox_size / 2,\n",
-    "        lon + bbox_size / 2,\n",
-    "        lat + bbox_size / 2\n",
-    "    ]\n",
-    "\n",
-    "    catalog = pystac_client.Client.open(\n",
-    "        \"https://planetarycomputer.microsoft.com/api/stac/v1\",\n",
-    "        modifier=pc.sign_inplace,\n",
-    "    )\n",
-    "\n",
-    "    # Wider search range, we'll filter to nearest date later\n",
-    "    search = catalog.search(\n",
-    "        collections=[\"landsat-c2-l2\"],\n",
-    "        bbox=bbox,\n",
-    "        datetime=\"2011-01-01/2015-12-31\",\n",
-    "        query={\"eo:cloud_cover\": {\"lt\": 10}},\n",
-    "    )\n",
-    "    \n",
-    "    items = search.item_collection()\n",
-    "\n",
-    "    if not items:\n",
-    "        return pd.Series({\n",
-    "            \"nir\": np.nan, \"green\": np.nan, \"swir16\": np.nan, \"swir22\": np.nan\n",
-    "        })\n",
-    "\n",
+    "def compute_Landsat_values(row, max_retries=3, backoff_seconds=2.0):\n",
     "    try:\n",
+    "        lat = row['Latitude']\n",
+    "        lon = row['Longitude']\n",
+    "        sample_dt = pd.to_datetime(row['Sample Date'], dayfirst=True, errors='coerce')\n",
+    "        if pd.isna(sample_dt):\n",
+    "            return pd.Series({\n",
+    "                \"nir\": np.nan, \"green\": np.nan, \"swir16\": np.nan, \"swir22\": np.nan,\n",
+    "                \"coastal\": np.nan, \"blue\": np.nan, \"red\": np.nan, \"lwir\": np.nan\n",
+    "            })\n",
+    "\n",
+    "        # Buffer size for ~100m\n",
+    "        bbox_size = 0.00089831\n",
+    "        bbox = [\n",
+    "            lon - bbox_size / 2,\n",
+    "            lat - bbox_size / 2,\n",
+    "            lon + bbox_size / 2,\n",
+    "            lat + bbox_size / 2\n",
+    "        ]\n",
+    "\n",
+    "        # Retry the STAC search to handle transient API errors\n",
+    "        items = None\n",
+    "        last_err = None\n",
+    "        for attempt in range(max_retries):\n",
+    "            try:\n",
+    "                catalog = pystac_client.Client.open(\n",
+    "                    \"https://planetarycomputer.microsoft.com/api/stac/v1\",\n",
+    "                    modifier=pc.sign_inplace,\n",
+    "                )\n",
+    "                search = catalog.search(\n",
+    "                    collections=[\"landsat-c2-l2\"],\n",
+    "                    bbox=bbox,\n",
+    "                    datetime=\"2011-01-01/2015-12-31\",\n",
+    "                    query={\"eo:cloud_cover\": {\"lt\": 10}},\n",
+    "                )\n",
+    "                items = search.item_collection()\n",
+    "                break\n",
+    "            except Exception as e:\n",
+    "                last_err = e\n",
+    "                time.sleep(backoff_seconds * (2 ** attempt))\n",
+    "        if items is None:\n",
+    "            # After retries, still failing: return NaNs so apply continues\n",
+    "            return pd.Series({\n",
+    "                \"nir\": np.nan, \"green\": np.nan, \"swir16\": np.nan, \"swir22\": np.nan,\n",
+    "                \"coastal\": np.nan, \"blue\": np.nan, \"red\": np.nan, \"lwir\": np.nan\n",
+    "            })\n",
+    "\n",
+    "        if not items:\n",
+    "            return pd.Series({\n",
+    "                \"nir\": np.nan, \"green\": np.nan, \"swir16\": np.nan, \"swir22\": np.nan,\n",
+    "                \"coastal\": np.nan, \"blue\": np.nan, \"red\": np.nan, \"lwir\": np.nan\n",
+    "            })\n",
+    "\n",
     "        # Convert sample date to UTC\n",
-    "        sample_date_utc = date.tz_localize(\"UTC\") if date.tzinfo is None else date.tz_convert(\"UTC\")\n",
+    "        sample_date_utc = sample_dt.tz_localize(\"UTC\") if sample_dt.tzinfo is None else sample_dt.tz_convert(\"UTC\")\n",
     "\n",
     "        # Pick the item closest to the sample date\n",
     "        items = sorted(\n",
@@ -128,37 +147,55 @@
     "        selected_item = pc.sign(items[0])\n",
     "\n",
     "        # Load required bands\n",
-    "        bands_of_interest = [\"green\", \"nir08\", \"swir16\", \"swir22\"]\n",
+    "        bands_of_interest = [\"green\", \"nir08\", \"swir16\", \"swir22\", \"coastal\", \"blue\", \"red\", \"lwir\"]\n",
     "        data = stac_load([selected_item], bands=bands_of_interest, bbox=bbox).isel(time=0)\n",
     "\n",
     "        green = data[\"green\"].astype(\"float\")\n",
     "        nir = data[\"nir08\"].astype(\"float\")\n",
     "        swir16 = data[\"swir16\"].astype(\"float\")\n",
     "        swir22 = data[\"swir22\"].astype(\"float\")\n",
-    "        \n",
+    "        coastal = data[\"coastal\"].astype(\"float\")\n",
+    "        blue = data[\"blue\"].astype(\"float\")\n",
+    "        red = data[\"red\"].astype(\"float\")\n",
+    "        lwir = data[\"lwir\"].astype(\"float\")\n",
+    "\n",
     "        # Compute medians\n",
     "        median_green = float(green.median(skipna=True).values)\n",
     "        median_nir = float(nir.median(skipna=True).values)\n",
     "        median_swir16 = float(swir16.median(skipna=True).values)\n",
-    "        median_swir22 = float(swir22.median(skipna=True).values) # aqui ele calcula a mediana dos caras, mas as vezes a média pode ser melhor\n",
+    "        median_swir22 = float(swir22.median(skipna=True).values)\n",
+    "        median_coastal = float(coastal.median(skipna=True).values)\n",
+    "        median_blue = float(blue.median(skipna=True).values)\n",
+    "        median_red = float(red.median(skipna=True).values)\n",
+    "        median_lwir = float(lwir.median(skipna=True).values)\n",
     "\n",
     "        # Replace 0 with NaN\n",
     "        median_green = median_green if median_green != 0 else np.nan\n",
     "        median_nir = median_nir if median_nir != 0 else np.nan\n",
     "        median_swir16 = median_swir16 if median_swir16 != 0 else np.nan\n",
     "        median_swir22 = median_swir22 if median_swir22 != 0 else np.nan\n",
-    "        \n",
+    "        median_coastal = median_coastal if median_coastal != 0 else np.nan\n",
+    "        median_blue = median_blue if median_blue != 0 else np.nan\n",
+    "        median_red = median_red if median_red != 0 else np.nan\n",
+    "        median_lwir = median_lwir if median_lwir != 0 else np.nan\n",
+    "\n",
     "        return pd.Series({\n",
     "            \"nir\": median_nir,\n",
     "            \"green\": median_green,\n",
     "            \"swir16\": median_swir16,\n",
     "            \"swir22\": median_swir22,\n",
+    "            \"coastal\": median_coastal,\n",
+    "            \"blue\": median_blue,\n",
+    "            \"red\": median_red,\n",
+    "            \"lwir\": median_lwir\n",
     "        })\n",
-    "    \n",
-    "    except Exception as e:\n",
+    "\n",
+    "    except Exception:\n",
+    "        # Any unexpected error: fail soft and continue progress\n",
     "        return pd.Series({\n",
-    "            \"nir\": np.nan, \"green\": np.nan, \"swir16\": np.nan, \"swir22\": np.nan\n",
-    "        })\n"
+    "            \"nir\": np.nan, \"green\": np.nan, \"swir16\": np.nan, \"swir22\": np.nan,\n",
+    "            \"coastal\": np.nan, \"blue\": np.nan, \"red\": np.nan, \"lwir\": np.nan\n",
+    "        })"
    ]
   },
   {
@@ -171,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "id": "3c046f70-aa61-4bbe-8b1a-ac8624f87ed9",
    "metadata": {},
    "outputs": [
@@ -270,7 +307,7 @@
        "4                          151.0  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -282,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 14,
    "id": "f33406f9-9c07-400b-95a5-cdfdc81c5eba",
    "metadata": {},
    "outputs": [
@@ -292,7 +329,7 @@
        "(9319, 6)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -368,6 +405,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "fbb347a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🚀 Running Landsat feature extraction for training data with more bands...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 9319/9319 [6:43:57<00:00,  2.60s/it]   \n"
+     ]
+    }
+   ],
+   "source": [
+    "#extract more bands\n",
+    "train_features_path = \"../Datasets/landsat_features_more_bands_training.csv\"\n",
+    "print(\"🚀 Running Landsat feature extraction for training data with more bands...\")\n",
+    "landsat_train_features = Water_Quality_df.progress_apply(compute_Landsat_values, axis=1)\n",
+    "landsat_train_features.to_csv(train_features_path, index=False)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "400e9ddb-81f6-45eb-ad41-e1950f6f4eac",
    "metadata": {},
@@ -384,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "31ca3eaa-45f9-44af-b444-2dff934d02f4",
    "metadata": {},
    "outputs": [],
@@ -392,12 +458,16 @@
     "# Create indices: NDMI and MNDWI\n",
     "eps = 1e-10\n",
     "landsat_train_features['NDMI'] = (landsat_train_features['nir'] - landsat_train_features['swir16']) / (landsat_train_features['nir'] + landsat_train_features['swir16'] + eps)\n",
-    "landsat_train_features['MNDWI'] = (landsat_train_features['green'] - landsat_train_features['swir16']) / (landsat_train_features['green'] + landsat_train_features['swir16'] + eps)"
+    "landsat_train_features['MNDWI'] = (landsat_train_features['green'] - landsat_train_features['swir16']) / (landsat_train_features['green'] + landsat_train_features['swir16'] + eps)\n",
+    "landsat_train_features['Clorfilia'] = (landsat_train_features['green']/landsat_train_features['blue'] + eps)\n",
+    "landsat_train_features['Turbidity'] = (landsat_train_features['red']/landsat_train_features['blue'] + eps)\n",
+    "landsat_train_features['NDTI'] = (landsat_train_features['red'] - landsat_train_features['green']) / (landsat_train_features['red'] + landsat_train_features['green'] + eps)\n",
+    "landsat_train_features[\"NDVI\"] = (landsat_train_features['nir'] - landsat_train_features['red']) / (landsat_train_features['nir'] + landsat_train_features['red'] + eps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "0d9d6711-3553-437a-8830-db69ce8afc80",
    "metadata": {},
    "outputs": [],
@@ -405,7 +475,8 @@
     "landsat_train_features['Latitude'] = Water_Quality_df['Latitude']\n",
     "landsat_train_features['Longitude'] = Water_Quality_df['Longitude']\n",
     "landsat_train_features['Sample Date'] = Water_Quality_df['Sample Date']\n",
-    "landsat_train_features = landsat_train_features[['Latitude', 'Longitude', 'Sample Date', 'nir', 'green', 'swir16', 'swir22', 'NDMI', 'MNDWI']]"
+    "landsat_train_features = landsat_train_features[['Latitude', 'Longitude', 'Sample Date', 'nir', 'green', 'swir16', 'swir22', 'coastal',\n",
+    "                                                 'blue', 'red', 'lwir', 'NDMI', 'MNDWI', 'Clorfilia', 'Turbidity', 'NDTI', 'NDVI']]"
    ]
   },
   {
@@ -719,28 +790,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "id": "d098354f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "val_features_path = \"../Datasets/landsat_features_more_bands_validation.csv\"\n",
+    "\n",
+    "print(\"🚀 Running Landsat feature extraction for validation data with more bands...\")\n",
+    "landsat_val_features = Validation_df.progress_apply(compute_Landsat_values, axis=1)\n",
+    "landsat_val_features.to_csv(val_features_path, index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b130a364-1778-457e-ace5-b121dfcc7c7c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create indices: NDMI and MNDWI\n",
     "eps = 1e-10\n",
-    "landsat_val_features['NDMI'] = (landsat_val_features['nir'] - landsat_val_features['swir16']) / (landsat_val_features['nir'] + landsat_val_features['swir16'])\n",
-    "landsat_val_features['MNDWI'] = (landsat_val_features['green'] - landsat_val_features['swir16']) / (landsat_val_features['green'] + landsat_val_features['swir16'] + eps)"
+    "landsat_val_features['NDMI'] = (landsat_val_features['nir'] - landsat_val_features['swir16']) / (landsat_val_features['nir'] + landsat_val_features['swir16'] + eps)\n",
+    "landsat_val_features['MNDWI'] = (landsat_val_features['green'] - landsat_val_features['swir16']) / (landsat_val_features['green'] + landsat_val_features['swir16'] + eps)\n",
+    "landsat_val_features['Clorfilia'] = (landsat_val_features['green']/landsat_val_features['blue'] + eps)\n",
+    "landsat_val_features['Turbidity'] = (landsat_val_features['red']/landsat_val_features['blue'] + eps)\n",
+    "landsat_val_features['NDTI'] = (landsat_val_features['red'] - landsat_val_features['green']) / (landsat_val_features['red'] + landsat_val_features['green'] + eps)\n",
+    "landsat_val_features[\"NDVI\"] = (landsat_val_features['nir'] - landsat_val_features['red']) / (landsat_val_features['nir'] + landsat_val_features['red'] + eps)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "dc7fe05a-2bfd-4d0f-a796-48a1e2f3b3c0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "landsat_val_features['Latitude'] = Validation_df['Latitude']\n",
-    "landsat_val_features['Longitude'] = Validation_df['Longitude']\n",
-    "landsat_val_features['Sample Date'] = Validation_df['Sample Date']\n",
-    "landsat_val_features = landsat_val_features[['Latitude', 'Longitude', 'Sample Date', 'nir', 'green', 'swir16', 'swir22', 'NDMI', 'MNDWI']]"
+    "landsat_val_features['Latitude'] = Water_Quality_df['Latitude']\n",
+    "landsat_val_features['Longitude'] = Water_Quality_df['Longitude']\n",
+    "landsat_val_features['Sample Date'] = Water_Quality_df['Sample Date']\n",
+    "landsat_val_features = landsat_val_features[['Latitude', 'Longitude', 'Sample Date', 'nir', 'green', 'swir16', 'swir22', 'coastal',\n",
+    "                                                 'blue', 'red', 'lwir', 'NDMI', 'MNDWI', 'Clorfilia', 'Turbidity', 'NDTI', 'NDVI']]"
    ]
   },
   {
