donwload final de more_bands do landsat

--- a/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
+++ b/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
@@ -989,7 +989,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
+   "id": "ce803dec",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(9319, 8)"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "landsat_train_features = pd.read_csv(train_features_path)\n",
+    "landsat_train_features.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "id": "31ca3eaa-45f9-44af-b444-2dff934d02f4",
    "metadata": {},
    "outputs": [],
@@ -1006,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "id": "0d9d6711-3553-437a-8830-db69ce8afc80",
    "metadata": {},
    "outputs": [],
@@ -1020,12 +1042,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 32,
    "id": "cb76690d-077e-4c1d-8213-4300c87f62cb",
    "metadata": {},
    "outputs": [],
    "source": [
-    "landsat_train_features.to_csv(train_features_path, index=False)"
+    "final_train_features_path = \"../Datasets/landsat_features_more_bands_final_training.csv\"\n",
+    "landsat_train_features.to_csv(final_train_features_path, index=False)"
    ]
   },
   {
