featurs_more_bands_train_merged

--- a/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
+++ b/Jupyter_Notebook_Package/Landsat_Data_Extraction_Notebook.ipynb
@@ -1182,6 +1182,75 @@
   },
   {
    "cell_type": "markdown",
+   "id": "71a81367",
+   "metadata": {},
+   "source": [
+    "### Joining data from the example data set with the downloaded dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "dfbbd657",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Linhas no seu original: 9319\n",
+      "Linhas no exemplo: 9319\n",
+      "Linhas após a união: 9319\n"
+     ]
+    }
+   ],
+   "source": [
+    "landsat_example_train_features = pd.read_csv('../Datasets/landsat_features_training.csv')\n",
+    "landsat_train_features['Sample Date'] = pd.to_datetime(landsat_train_features['Sample Date'], dayfirst=True, errors='coerce')\n",
+    "landsat_example_train_features['Sample Date'] = pd.to_datetime(landsat_example_train_features['Sample Date'], dayfirst=True, errors='coerce')\n",
+    "\n",
+    "# 2. Definir as colunas que servem de \"ID\" (as chaves)\n",
+    "chaves = ['Latitude', 'Longitude', 'Sample Date']\n",
+    "\n",
+    "# 3. Fazer o merge (Outer Join)\n",
+    "# how='outer' garante que:\n",
+    "# - Se a linha só existe no seu, ela fica.\n",
+    "# - Se a linha só existe no exemplo, ela fica.\n",
+    "# - Se existe nos dois, elas se juntam.\n",
+    "df_merged = pd.merge(\n",
+    "    landsat_train_features, \n",
+    "    landsat_example_train_features, \n",
+    "    on=chaves, \n",
+    "    how='outer', \n",
+    "    suffixes=('', '_exemplo') # Adiciona sufixo nas colunas repetidas (nir, green, etc)\n",
+    ")\n",
+    "\n",
+    "# 4. Lista das colunas que existem nos dois datasets\n",
+    "colunas_comuns = ['nir', 'green', 'swir16', 'swir22', 'NDMI', 'MNDWI']\n",
+    "\n",
+    "# 5. Preencher os vázios: se a coluna original for NaN, pega o valor da coluna _exemplo\n",
+    "for col in colunas_comuns:\n",
+    "    df_merged[col] = df_merged[col].fillna(df_merged[col + '_exemplo'])\n",
+    "\n",
+    "df_merged = df_merged.sort_values(by=['Sample Date', 'Latitude', 'Longitude'])\n",
+    "df_merged['Sample Date'] = df_merged['Sample Date'].dt.strftime('%d-%m-%Y')\n",
+    "\n",
+    "\n",
+    "# 6. Agora que preenchemos, podemos apagar as colunas auxiliares do exemplo\n",
+    "colunas_para_remover = [col + '_exemplo' for col in colunas_comuns]\n",
+    "df_merged = df_merged.drop(columns=colunas_para_remover)\n",
+    "\n",
+    "# 7. Verificar o resultado\n",
+    "print(f\"Linhas no seu original: {len(landsat_train_features)}\")\n",
+    "print(f\"Linhas no exemplo: {len(landsat_example_train_features)}\")\n",
+    "print(f\"Linhas após a união: {len(df_merged)}\")\n",
+    "\n",
+    "# Salvar o resultado final\n",
+    "df_merged.to_csv(\"../Datasets/landsat_features_more_bands_train_merged.csv\", index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "1ac5f5ea-bd8a-41bc-bb62-47cc952952bf",
    "metadata": {},
    "source": [
