terraclimate more bands and indexes

--- a/Jupyter_Notebook_Package/TerraClimate_Data_Extraction_Notebook.ipynb
+++ b/Jupyter_Notebook_Package/TerraClimate_Data_Extraction_Notebook.ipynb
@@ -1242,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "id": "5f0fc36a-b4b7-44c4-bc59-7a1f6216d5ae",
    "metadata": {},
    "outputs": [],
@@ -1258,7 +1258,7 @@
     "Terraclimate_validation_df['Runoff_Ratio'] = Terraclimate_validation_df['q'] / (Terraclimate_validation_df['ppt'] + eps)\n",
     "Terraclimate_validation_df['Chemical_Solubility'] = (Terraclimate_validation_df['tmax'] + Terraclimate_validation_df['tmin']) / 2\n",
     "\n",
-    "Terraclimate_validation_df = Terraclimate_validation_df[['Latitude', 'Longitude', 'Sample Date', 'q', 'ppt', 'pet', 'soil', 'pdsi', 'tmax', 'tmin']]\n",
+    "Terraclimate_validation_df = Terraclimate_validation_df[['Latitude', 'Longitude', 'Sample Date', 'q', 'ppt', 'pet', 'soil', 'pdsi', 'tmax', 'tmin', 'Saline_Index', 'Runoff_Ratio', 'Chemical_Solubility']]\n",
     "Terraclimate_validation_df.to_csv('../Datasets/terraclimate_features_more_bands_validation.csv', index=False)"
    ]
   },
